--- a/SASPlanet.XE2.dproj
+++ b/SASPlanet.XE2.dproj
@@ -565,7 +565,9 @@
 				<Form>frElevationProfile</Form>
 				<DesignClass>TFrame</DesignClass>
 			</DCCReference>
+			<DCCReference Include="Src\MainForm\ElevationProfile\i_ElevationProfileConfig.pas"/>
 			<DCCReference Include="Src\MainForm\ElevationProfile\i_ElevationProfilePresenter.pas"/>
+			<DCCReference Include="Src\MainForm\ElevationProfile\u_ElevationProfileConfig.pas"/>
 			<DCCReference Include="Src\MainForm\ElevationProfile\u_ElevationProfilePresenterOnPanel.pas"/>
 			<DCCReference Include="Src\MainForm\FavoriteMapSet\fr_FavoriteMapSetManager.pas">
 				<Form>frFavoriteMapSetManager</Form>
@@ -749,6 +751,7 @@
 			<DCCReference Include="Src\MapLayers\WindowLayers\GoTo\i_GotoLayerConfig.pas"/>
 			<DCCReference Include="Src\MapLayers\WindowLayers\GoTo\u_GotoLayerConfig.pas"/>
 			<DCCReference Include="Src\MapLayers\WindowLayers\GoTo\u_MapLayerGotoMarker.pas"/>
+			<DCCReference Include="Src\MapLayers\WindowLayers\GpsTrackGoToMarker\u_MapLayerGpsTrackGoToMarker.pas"/>
 			<DCCReference Include="Src\MapLayers\WindowLayers\MergePolygons\i_MergePolygonsResultLayerConfig.pas"/>
 			<DCCReference Include="Src\MapLayers\WindowLayers\MergePolygons\u_MergePolygonsResultLayerConfig.pas"/>
 			<DCCReference Include="Src\MapLayers\WindowLayers\NavToMark\i_MapLayerNavToPointMarkerConfig.pas"/>
