--- a/SASPlanet.110.dproj
+++ b/SASPlanet.110.dproj
@@ -1614,8 +1614,14 @@
         <DCCReference Include="Src\Logger\u_LogForTaskThread.pas"/>
         <DCCReference Include="Src\Logger\u_TileErrorInfo.pas"/>
         <DCCReference Include="Src\Logger\u_TileErrorLogProviedrStuped.pas"/>
+        <DCCReference Include="Src\MainForm\ElevationMetaWriter\frm_ElevationMetaWriterProgress.pas">
+            <Form>frmElevationMetaWriterProgress</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <DCCReference Include="Src\MainForm\ElevationMetaWriter\i_ElevationMetaWriter.pas"/>
+        <DCCReference Include="Src\MainForm\ElevationMetaWriter\i_ElevationMetaWriterProgress.pas"/>
         <DCCReference Include="Src\MainForm\ElevationMetaWriter\u_ElevationMetaWriter.pas"/>
+        <DCCReference Include="Src\MainForm\ElevationMetaWriter\u_ElevationMetaWriterProgress.pas"/>
         <DCCReference Include="Src\MainForm\ElevationProfile\fr_ElevationProfile.pas">
             <Form>frElevationProfile</Form>
             <FormType>dfm</FormType>
@@ -2606,6 +2612,7 @@
         <DCCReference Include="Src\System\u_LanguageManager.pas"/>
         <DCCReference Include="Src\System\u_LanguagesEx.pas"/>
         <DCCReference Include="Src\System\u_SystemTimeProvider.pas"/>
+        <DCCReference Include="Src\System\u_WindowsMessageCopyDataSender.pas"/>
         <DCCReference Include="Src\Terrain\External\u_ExternalTerrainAPI.pas"/>
         <DCCReference Include="Src\Terrain\External\u_ExternalTerrainsProvider.pas"/>
         <DCCReference Include="Src\Terrain\GoogleEarth\i_GoogleEarthTerrainTileStorage.pas"/>
@@ -2966,12 +2973,6 @@
         <DCCReference Include="Src\u_ValueToStringConverterChangeable.pas"/>
         <DCCReference Include="Src\u_ValueToStringConverterConfig.pas"/>
         <DCCReference Include="Src\u_WindowPositionConfig.pas"/>
-        <DCCReference Include="Src\MainForm\ElevationMetaWriter\frm_ElevationMetaWriterProgress.pas">
-            <Form>frmElevationMetaWriterProgress</Form>
-            <FormType>dfm</FormType>
-        </DCCReference>
-        <DCCReference Include="Src\MainForm\ElevationMetaWriter\i_ElevationMetaWriterProgress.pas"/>
-        <DCCReference Include="Src\MainForm\ElevationMetaWriter\u_ElevationMetaWriterProgress.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
