3429: Обработка тега styleUrl при импорте kml

--- a/SASPlanet.110.dproj
+++ b/SASPlanet.110.dproj
@@ -2873,6 +2873,7 @@
         <DCCReference Include="Src\Vector\u_VectorItemTreeImporterList.pas"/>
         <DCCReference Include="Src\Vector\u_VectorItemTreeImporterListSimple.pas"/>
         <DCCReference Include="Src\Vector\u_VectorItemTreeImporterXML.pas"/>
+        <DCCReference Include="Src\Vector\u_VectorItemTreeImporterXmlHelpers.pas"/>
         <DCCReference Include="Src\Vector\u_VectorItemTreeMarksDb.pas"/>
         <DCCReference Include="Src\i_GlobalAppConfig.pas"/>
         <DCCReference Include="Src\i_GlobalConfig.pas"/>
