--- a/SASPlanet.110.dproj
+++ b/SASPlanet.110.dproj
@@ -2603,6 +2603,7 @@
         <DCCReference Include="Src\i_WindowPositionConfig.pas"/>
         <DCCReference Include="Src\t_CommonTypes.pas"/>
         <DCCReference Include="Src\t_GeoTypes.pas"/>
+        <DCCReference Include="Src\u_AnsiStr.pas"/>
         <DCCReference Include="Src\u_BitmapFunc.pas"/>
         <DCCReference Include="Src\u_CommonFormAndFrameParents.pas"/>
         <DCCReference Include="Src\u_FileSystemFunc.pas"/>
