--- a/SASPlanet.110.dproj
+++ b/SASPlanet.110.dproj
@@ -2176,6 +2176,11 @@
         </DCCReference>
         <DCCReference Include="Src\RegionProcess\GenPrev\u_ProviderTilesGenPrev.pas"/>
         <DCCReference Include="Src\RegionProcess\GenPrev\u_ThreadGenPrevZoom.pas"/>
+        <DCCReference Include="Src\RegionProcess\fr_ImageFormatSelect.pas">
+            <Form>Frame1</Form>
+            <FormType>dfm</FormType>
+            <DesignClass>TFrame</DesignClass>
+        </DCCReference>
         <DCCReference Include="Src\RegionProcess\fr_MapSelect.pas">
             <Form>frMapSelect</Form>
             <DesignClass>TFrame</DesignClass>
