--- a/SASPlanet.110.dproj
+++ b/SASPlanet.110.dproj
@@ -2105,6 +2105,7 @@
             <Form>frExportToFileCont</Form>
             <DesignClass>TFrame</DesignClass>
         </DCCReference>
+        <DCCReference Include="Src\RegionProcess\Export\Archive\t_ExportToFileCont.pas"/>
         <DCCReference Include="Src\RegionProcess\Export\Archive\u_ExportProviderTar.pas"/>
         <DCCReference Include="Src\RegionProcess\Export\Archive\u_ExportProviderZip.pas"/>
         <DCCReference Include="Src\RegionProcess\Export\Archive\u_ExportTaskToArchive.pas"/>
