--- a/SASPlanet.110.dproj
+++ b/SASPlanet.110.dproj
@@ -2523,10 +2523,12 @@
         <DCCReference Include="Src\UpdateChecker\u_UpdateProgress.pas"/>
         <DCCReference Include="Src\UrlByCoord\i_UrlByCoordProvider.pas"/>
         <DCCReference Include="Src\UrlByCoord\u_UrlByCoordProvider.pas"/>
+        <DCCReference Include="Src\Vcl\i_CommonDialogConfig.pas"/>
         <DCCReference Include="Src\Vcl\i_ComponentPropertyState.pas"/>
         <DCCReference Include="Src\Vcl\i_ComponentPropertyStorage.pas"/>
         <DCCReference Include="Src\Vcl\t_ComponentProperty.pas"/>
         <DCCReference Include="Src\Vcl\u_CheckListBoxExt.pas"/>
+        <DCCReference Include="Src\Vcl\u_CommonDialogConfig.pas"/>
         <DCCReference Include="Src\Vcl\u_ComponentPropertyState.pas"/>
         <DCCReference Include="Src\Vcl\u_ComponentPropertyStorage.pas"/>
         <DCCReference Include="Src\VectorLoaders\i_XmlVectorObjects.pas"/>
