--- a/SASPlanet.110.dproj
+++ b/SASPlanet.110.dproj
@@ -2523,14 +2523,22 @@
         <DCCReference Include="Src\UpdateChecker\u_UpdateProgress.pas"/>
         <DCCReference Include="Src\UrlByCoord\i_UrlByCoordProvider.pas"/>
         <DCCReference Include="Src\UrlByCoord\u_UrlByCoordProvider.pas"/>
+        <DCCReference Include="Src\ValueToStringConverter\i_ValueToStringConverter.pas"/>
+        <DCCReference Include="Src\ValueToStringConverter\i_ValueToStringConverterConfig.pas"/>
+        <DCCReference Include="Src\ValueToStringConverter\u_ValueToStringConverter.pas"/>
+        <DCCReference Include="Src\ValueToStringConverter\u_ValueToStringConverterChangeable.pas"/>
+        <DCCReference Include="Src\ValueToStringConverter\u_ValueToStringConverterConfig.pas"/>
         <DCCReference Include="Src\Vcl\i_CommonDialogConfig.pas"/>
         <DCCReference Include="Src\Vcl\i_ComponentPropertyState.pas"/>
         <DCCReference Include="Src\Vcl\i_ComponentPropertyStorage.pas"/>
+        <DCCReference Include="Src\Vcl\i_WindowPositionConfig.pas"/>
         <DCCReference Include="Src\Vcl\t_ComponentProperty.pas"/>
         <DCCReference Include="Src\Vcl\u_CheckListBoxExt.pas"/>
         <DCCReference Include="Src\Vcl\u_CommonDialogConfig.pas"/>
+        <DCCReference Include="Src\Vcl\u_CommonFormAndFrameParents.pas"/>
         <DCCReference Include="Src\Vcl\u_ComponentPropertyState.pas"/>
         <DCCReference Include="Src\Vcl\u_ComponentPropertyStorage.pas"/>
+        <DCCReference Include="Src\Vcl\u_WindowPositionConfig.pas"/>
         <DCCReference Include="Src\VectorLoaders\i_XmlVectorObjects.pas"/>
         <DCCReference Include="Src\VectorLoaders\u_CsvParser.pas"/>
         <DCCReference Include="Src\VectorLoaders\u_HlgParser.pas"/>
@@ -2628,14 +2636,10 @@
         <DCCReference Include="Src\i_TileRectChangeable.pas"/>
         <DCCReference Include="Src\i_TreeChangeable.pas"/>
         <DCCReference Include="Src\i_UsedMarksConfig.pas"/>
-        <DCCReference Include="Src\i_ValueToStringConverter.pas"/>
-        <DCCReference Include="Src\i_ValueToStringConverterConfig.pas"/>
-        <DCCReference Include="Src\i_WindowPositionConfig.pas"/>
         <DCCReference Include="Src\t_CommonTypes.pas"/>
         <DCCReference Include="Src\t_GeoTypes.pas"/>
         <DCCReference Include="Src\u_AnsiStr.pas"/>
         <DCCReference Include="Src\u_BitmapFunc.pas"/>
-        <DCCReference Include="Src\u_CommonFormAndFrameParents.pas"/>
         <DCCReference Include="Src\u_FileSystemFunc.pas"/>
         <DCCReference Include="Src\u_GeoFunc.pas"/>
         <DCCReference Include="Src\u_GeoToStrFunc.pas"/>
@@ -2694,10 +2698,6 @@
         <DCCReference Include="Src\u_TreeChangeableBase.pas"/>
         <DCCReference Include="Src\u_UsedMarksConfig.pas"/>
         <DCCReference Include="Src\u_UsedMarksConfigStatic.pas"/>
-        <DCCReference Include="Src\u_ValueToStringConverter.pas"/>
-        <DCCReference Include="Src\u_ValueToStringConverterChangeable.pas"/>
-        <DCCReference Include="Src\u_ValueToStringConverterConfig.pas"/>
-        <DCCReference Include="Src\u_WindowPositionConfig.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
