--- a/SASPlanet.110.dproj
+++ b/SASPlanet.110.dproj
@@ -2724,6 +2724,7 @@
         <DCCReference Include="Src\u_TreeChangeableBase.pas"/>
         <DCCReference Include="Src\u_UsedMarksConfig.pas"/>
         <DCCReference Include="Src\u_UsedMarksConfigStatic.pas"/>
+        <DCCReference Include="Src\Vcl\u_ListViewExt.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
